<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="25dp"
        android:paddingEnd="20dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:src="@drawable/icon_black_back" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/home_me_transaction_summary"
            android:textColor="@color/colorTxt"
            android:textSize="18sp" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/transaction_summary_test_merchant"
        android:textColor="@color/black_33"
        android:textSize="14sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_rect_grey_r15"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_summary_start_time"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/black_00"
                android:textSize="12sp"
                tools:text="2022-08-11 12:25:30" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_summary_end_time"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/black_00"
                android:textSize="12sp"
                tools:text="2022-08-11 12:25:30" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_summary_receipt_number"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_receipt_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/black_00"
                android:textSize="12sp"
                tools:text="1" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_rect_grey_r15"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/transaction_summary_type"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/transaction_summary_entries"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:text="@string/transaction_summary_amount"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_E0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/transaction_summary"
                android:textColor="@color/black_33"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_all_entries"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="10"
                android:textColor="@color/black_33"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_all_amount"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_height="wrap_content"
                tools:text="SGD 100.00"
                android:textColor="@color/black_33"
                android:textSize="14sp" />


        </LinearLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_rect_blue_button"
            android:gravity="center"
            android:onClick="onPrint"
            android:text="@string/transaction_summary_print"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </RelativeLayout>


</LinearLayout>
