<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="25dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/icon_black_back" />


        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/order_detail_title"
            android:textColor="@color/colorTxt"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_print"
            android:layout_width="18dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_print"
            android:visibility="gone"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_rect_grey_r15"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_no"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_order_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/black_00"
                android:textSize="12sp"
                tools:text="1234234234234234" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_status"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/black_00"
                android:textSize="12sp"
                tools:text="pinding" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_time"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/red_FF"
                android:textSize="12sp"
                tools:text="15:00" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_detail_biling_message"
        android:textColor="@color/black_00"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_rect_grey_r15"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/order_detail_fiat_amount"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_fiat_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/black_00"
                android:textSize="12sp"
                tools:text="100.00 CAD" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_digital_amount"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_digital_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/black_00"
                android:textSize="12sp"
                tools:text="65.23 USDT" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_paymeng_method"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_payment_method_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_coin_ach"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/tv_payment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_00"
                android:textSize="12sp"
                tools:text="USDT" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_order_created"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_order_create_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/black_00"
                android:textSize="12sp"
                tools:text="2021-12-31 11:00:00" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_address_to"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_address_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/black_00"
                android:textSize="12sp"
                tools:text="2021-12-31 11:00:00" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_order_closed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_order_closed"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_order_closed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/black_00"
                android:textSize="12sp"
                tools:text="2021-12-31 11:00:00" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_payment_method_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_detail_paymeng_method"
        android:textColor="@color/black_00"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="16sp" />


    <LinearLayout
        android:id="@+id/ll_payment_method_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_rect_grey_r15"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_payment_amount"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_payment_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/black_00"
                android:textSize="12sp"
                tools:text="100.00 CAD" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_order_payed"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_order_payed_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/black_00"
                android:textSize="12sp"
                tools:text="65.23 USDT" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_blockchain_id"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_blockchain_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="end"
                android:textColor="@color/black_00"
                android:textSize="12sp"
                tools:text="USDTldskjlfks;ldkf;lskd;lf;sl" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_detail_address_from"
                android:textColor="@color/grey_66"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_address_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginStart="20dp"
                android:textColor="@color/black_00"
                android:textSize="12sp"
                tools:text="2021-12-31 11:00:00" />
        </LinearLayout>

    </LinearLayout>


<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1">-->

<!--        <ImageView-->
<!--            android:layout_width="14dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:src="@drawable/icon_while_back"/>-->

<!--        <TextView-->
<!--            android:id="@+id/tv_confirm"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="45dp"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            android:background="@drawable/bg_rect_blue_button"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/order_detail_continue_to_pay"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="16dp"-->
<!--            android:visibility="gone"/>-->
<!--    </RelativeLayout>-->

</LinearLayout>

